force-app/main/default/objects/ResourceAbsence/fields/FSL__Gantt_Color__c.field-meta.xml
<CustomField>
    <fullName>FSL__Gantt_Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gantt Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>