force-app/main/default/objects/ResourceAbsence/fields/SFS_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>SFS_ApprovalStatus__c</fullName>
    <description>This field is used for SFS resource absence approval.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>