force-app/main/default/objects/ResourceAbsence/fields/SFS_Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>SFS_Approved_Rejected_By__c</fullName>
    <description>This field captures who approved/rejected the resource absence. It is also displayed in the related list.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved/Rejected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>