force-app/main/default/objects/ResourceAbsence/recordTypes/FSL__Non_Availability.recordType-meta.xml
<RecordType>
    <fullName>FSL__Non_Availability</fullName>
    <active>true</active>
    <label>Non Availability</label>
</RecordType>